name:            wai-better-cache
version:         0.0.0
synopsis:        A better cache middleware for WAI
description:     https://github.com/myfreeweb/wai-better-cache
category:        Web
homepage:        https://github.com/myfreeweb/wai-better-cache
author:          Greg V
copyright:       2016 Greg V <greg@unrelenting.technology>
maintainer:      greg@unrelenting.technology
license:         PublicDomain
license-file:    UNLICENSE
build-type:      Simple
cabal-version:   >= 1.10
extra-source-files:
    README.md
tested-with:
    GHC == 8.0.1

source-repository head
    type: git
    location: git://github.com/myfreeweb/wai-better-cache.git

flag inmemory
  description: Build the in-memory lrucache backend
  default: True

library
    build-depends:
        base >= 4.3.0.0 && < 5
      , text
      , bytestring
      , memory
      , case-insensitive
      , blaze-builder
      , hashable
      , unordered-containers
      , errors
      , safe
      , clock
      , time
      , wai
      , http-types
      , attoparsec
      , lrucache
    default-language: Haskell2010
    exposed-modules:
        Network.Wai.Middleware.BetterCache
        Network.Wai.Middleware.BetterCache.Keys
    -- other-modules:
    hs-source-dirs: library
    ghc-options: -Wall
    if flag(inmemory)
        cpp-options: -DINMEMORY

test-suite tests
    build-depends:
        base >= 4.3.0.0 && < 5
      , text
      , wai-better-cache
      , case-insensitive
      , unordered-containers
      , transformers
      , safe
      , wai
      , wai-extra
      , http-types
      , hspec
      , hspec-expectations-pretty-diff
    default-language: Haskell2010
    ghc-options: -threaded -fhpc -Wall
    hs-source-dirs: test-suite
    main-is: Spec.hs
    other-modules:
        Network.Wai.Middleware.BetterCacheSpec
        Network.Wai.Middleware.BetterCache.KeysSpec
    type: exitcode-stdio-1.0
